--- a/src/app/components/pokemon/list-page/list-page.css
+++ b/src/app/components/pokemon/list-page/list-page.css
@@ -22,6 +22,7 @@
 
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
+  cursor: pointer;
 }
 
 .flip-card-front, .flip-card-back {
