--- a/src/app/components/structure/navbar/navbar.html
+++ b/src/app/components/structure/navbar/navbar.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" routerLink="/cards/list">Pokemon TCG</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="monster/list">Monster Hunter</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
