--- a/src/app/components/monster/detail-page-mosnter/detail-page-mosnter.html
+++ b/src/app/components/monster/detail-page-mosnter/detail-page-mosnter.html
@@ -1,1 +1,71 @@
-<p>detail-page-mosnter works!</p>
+@if (monster) {
+  <div class="card bg-dark text-light my-5 rounded-2 shadow p-3">
+
+    <div class="row"> <div class="col-md-4 mb-4 mb-md-0">
+      <img [src]="monster.assets.image" [alt]="monster.name" class="img-fluid rounded-3">
+    </div>
+
+      <div class="col-md-8 ">
+        <h2 class="text-primary">{{monster.name}}</h2>
+
+        <h4 class="mt-3"><strong>Icono:</strong></h4>
+        <img [src]="monster.assets.icon" class="mb-3">
+
+        <h4><strong>Tipo de daño: </strong>{{monster.damageType}}</h4>
+        <h4><strong>rareza: </strong>{{monster.rarity}}</h4>
+
+        <div class="my-4">
+          <h4><strong>Elementos:</strong></h4>
+          @for (element of monster.elements; track $index){
+            <h4 class="text-primary mb-0">Daño: {{element.damage}}</h4>
+            <h4 class="text-primary mt-0 mb-2">Tipo: {{element.type}}</h4>
+          }
+        </div>
+
+        <h4 class="mt-4"><strong>Durabilidad:</strong></h4>
+
+        @if (monster.durability?.length) {
+          <div class="progress mt-2" style="height: 20px;">
+            <div
+              class="progress-bar bg-danger"
+              [style.width.%]="monster.durability[0].red">
+            </div>
+
+            <div
+              class="progress-bar bg-warning"
+              [style.width.%]="monster.durability[0].orange">
+            </div>
+
+            <div
+              class="progress-bar bg-warning-subtle"
+              [style.width.%]="monster.durability[0].yellow">
+            </div>
+
+            <div
+              class="progress-bar bg-success"
+              [style.width.%]="monster.durability[0].green">
+            </div>
+
+            <div
+              class="progress-bar bg-info"
+              [style.width.%]="monster.durability[0].blue">
+            </div>
+
+            <div
+              class="progress-bar bg-light"
+              [style.width.%]="monster.durability[0].white">
+            </div>
+
+            <div
+              class="progress-bar bg-primary"
+              [style.width.%]="monster.durability[0].purple">
+            </div>
+          </div>
+        }
+      </div> </div> </div> } @else {
+  <div class="d-flex justify-content-center">
+    <div class="spinner-border text-info" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+}
