--- a/src/app/components/monster/list-page-mosnter/list-page-mosnter.html
+++ b/src/app/components/monster/list-page-mosnter/list-page-mosnter.html
@@ -12,12 +12,14 @@
     </div>
 
     @for ( monster of monsterList(); track monster.id) {
-      <div class="card" style="width: 18rem;">
+      <div class="col-md-3 my-2 ">
+      <div class="card card bg-dark text-light" [routerLink]="'/monster/detail/'+monster.id" style="width: 18rem; ">
         <img [src]="monster.assets.image" class="card-img-top" [alt]="monster.name">
         <div class="card-body">
           <h5 class="card-title">{{ monster.name }}</h5>
           <p class="card-text">{{monster.type}}</p>
         </div>
+      </div>
       </div>
     }
 
