--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="menu d-flex flex-wrap flex-column flex-md-row justify-content-center align-items-center gap-3 my-4 ">
+<img src="https://pokeflip.com/cdn/shop/articles/Ontwerp_zonder_titel_-_2021-06-23T174108.270.jpg?v=1715009318" routerLink="/cards/list" class="rounded float-start" alt="Pokemon TGC">
+<img src="https://gaming-cdn.com/images/products/5858/orig/monster-hunter-world-pc-juego-steam-cover.jpg?v=1726564218" routerLink="/monster/list" class="rounded float" alt="Monster Hunter">
+<img src="https://i0.wp.com/geekpopnews.com.br/wp-content/uploads/2024/10/Valorant-Imagem-de-Capa.jpg?resize=1200%2C640&ssl=1" routerLink="/valorant/list" class="rounded float-end" alt="Valorant">
+<img src="https://chiguiredark.home.blog/wp-content/uploads/2019/03/final-space-1-780x517.jpg" routerLink="/final/list" class="rounded float-end" alt="Final">
+</div>
