--- a/src/app/components/structure/navbar/navbar.html
+++ b/src/app/components/structure/navbar/navbar.html
@@ -13,7 +13,10 @@
           <a class="nav-link active" href="monster/list">Monster Hunter</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link active" href="valorant/list">Valorant</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="final/list">Final Space</a>
         </li>
 
       </ul>
